src/test/deca/etapeB/invalid/equals_notvalid_float_string.res
./src/test/deca/etapeB/invalid/equals_notvalid_float_string.deca:7:5: cannot use operator eqquals on two different type
